add the delete and put part with its comments in the characters-routes.js
